pages/services/beta-storage/0.3.0-beta/install/artifacts-container-based/index.md
---
layout: layout.pug
navigationTitle: Via Artifacts Container
title: Via Artifacts Container
menuWeight: 30
excerpt: Instructions for installing the DC/OS Storage Service using the artifacts container.
enterprise: true
---

**Note**: This install method is *deprecated*.
Please consider switching to the [package registry based install](../package-registry-based/).

# Prerequisites

- DC/OS Enterprise 1.12 or above.
- [DC/OS CLI](/latest/cli/install/) is installed and has been logged in as a superuser.

# Download the package tarball

DC/OS Storage Service (DSS) is packaged as a tarball.
The tarball can be downloaded from [Mesosphere support site](https://support.mesosphere.com/hc/en-us/articles/213198586).

# Build the local universe and artifacts server

Extract DC/OS Storage Service (DSS) package tarball.
You should name the tarball `package.tgz`.

**Note:** Do not delete the package after extraction.

```bash
$ tar zxvf package.tgz
$ cd package
```

Build the Docker image that will serve both the local universe and the artifacts used by DC/OS Storage Service.
Specify the `DOCKER_IMAGE` environment variable accordingly so that the image can be pushed to docker hub or your local docker registry.

**Note:** Do not specify the tag of the Docker image.
The tag will be generated by the build script according to the version of the DSS package.

```bash
$ DOCKER_IMAGE=user/storage-artifacts universe/build.sh
```

The build script will generate some instructions for the next steps like the following.
Notice, that the `<SHA>` will be replaced with a real SHA1 value, reflecting the version of the DSS package.

**Note:** Do not change the SHA value during the instruction workflow.

```bash
==========
Next Steps
==========

1. Push the docker image 'user/storage-artifacts:<SHA>'
:; docker push user/storage-artifacts:<SHA>

2. Run the following marathon app in your cluster
:; dcos marathon app add /dev/stdin <<EOF
{
  "id": "/storage-artifacts/<SHA>",
  "instances": 1,
  "cpus": 0.25,
  "mem": 128,
  "container": {
    "type": "MESOS",
    "docker": {
      "image": "user/storage-artifacts:<SHA>",
      "forcePullImage": true
    },
    "portMappings": [
      {
        "containerPort": 80,
        "labels": {
          "VIP_0": "/storage-artifacts/<SHA>:10000"
        },
        "protocol": "tcp"
      }
    ]
  },
  "networks": [
    {
      "mode": "container/bridge"
    }
  ]
}
EOF

3. Add the custom package repository
:; dcos package repo add storage-artifacts-<SHA> http://storage-artifacts<SHA>.marathon.l4lb.thisdcos.directory:10000/repo.json --index=0

4. Install the package
:; dcos package install beta-storage --package-version=<VERSION>
```

Follow the instructions and push the newly built docker image to a docker registry accessible in the cluster.

```bash
$ docker push user/storage-artifacts:<SHA>
```

# Launch the local universe and artifacts server

When the docker image has been pushed to the docker registry successfully, use the marathon config to launch a Marathon app that will serve the local universe and the storage artifacts.

```bash
$ cat <<EOF | dcos marathon app add /dev/stdin
{
  "id": "/storage-artifacts/<SHA>",
  "instances": 1,
  "cpus": 0.25,
  "mem": 128,
  "container": {
    "type": "MESOS",
    "docker": {
      "image": "user/storage-artifacts:<SHA>",
      "forcePullImage": true
    },
    "portMappings": [
      {
        "containerPort": 80,
        "labels": {
          "VIP_0": "/storage-artifacts/<SHA>:10000"
        },
        "protocol": "tcp"
      }
    ]
  },
  "networks": [
    {
      "mode": "container/bridge"
    }
  ]
}
EOF
```

# Add the local universe

Wait for the Marathon app to be in “Running” state, and then add the local universe for the DSS package.

```bash
$ dcos package repo add storage-artifacts-<SHA> http://storage-artifacts<SHA>.marathon.l4lb.thisdcos.directory:10000/repo.json --index=0
```

# Install the DSS package

When the above step is successful, install the DSS package by using the below command.
This command will install the DC/OS storage sub-command.

```bash
$ dcos package install beta-storage --package-version=<VERSION>
```

# Verify that the DSS is running

Run the following command and wait for the DSS to be ready.

```bash
$ dcos storage version
```
