pages/services/beta-storage/0.5.2-beta/install/artifacts-container-based/index.md
---
layout: layout.pug
navigationTitle: Via Artifacts Container
title: Via Artifacts Container
menuWeight: 30
excerpt: Installing the DC/OS Storage Service using the artifacts container
enterprise: true
beta: true
---

#include /services/include/beta-software-warning.tmpl

<p class="message--note"><strong>NOTE: </strong> This install method is <strong>deprecated</strong>.
Please consider switching to the <a href="../package-registry-based/">package registry based install</a> method.</p>

# Prerequisites

- DC/OS Enterprise 1.12 or later.
- [DC/OS CLI](/latest/cli/install/) is installed and you are logged in as a superuser.

# Download the package tarball

DC/OS Storage Service (DSS) is packaged as a tarball.
The tarball can be downloaded from [Mesosphere support site](https://support.mesosphere.com/hc/en-us/articles/213198586). Please note that in order to download software from the support page, you must have a Mesosphere support account.

# Build the local universe and artifacts server

Extract DC/OS Storage Service (DSS) package tarball.
You should name the tarball `package.tgz`.

<p class="message--note"><strong>NOTE: </strong> Do not delete the package after extraction.</p>

```bash
$ tar zxvf package.tgz
$ cd package
```

Build the Docker image that will serve both the local universe and the artifacts used by DC/OS Storage Service.
Specify the `DOCKER_IMAGE` environment variable accordingly so that the image can be pushed to docker hub or your local docker registry.

<p class="message--note"><strong>NOTE: </strong>Do not specify the tag of the Docker image.
The tag will be generated by the build script according to the version of the DSS package. </p>

```bash
$ DOCKER_IMAGE=user/storage-artifacts universe/build.sh
```

The build script will generate some instructions for the next steps like the following.
Notice, that the `<SHA>` will be replaced with a real SHA1 value, reflecting the version of the DSS package.

<p class="message--note"><strong>NOTE: </strong>* Do not change the SHA value during the instruction workflow.</p>


==========
Next Steps
==========

1. Push the docker image 'user/storage-artifacts:<SHA>'
    ```bash
    :; docker push user/storage-artifacts:<SHA>
    ```
1. Run the following marathon app in your cluster
    ```bash
    :; dcos marathon app add /dev/stdin <<EOF
    ```
    ```bash
    {
      "id": "/storage-artifacts/<SHA>",
      "instances": 1,
      "cpus": 0.25,
      "mem": 128,
      "container": {
        "type": "MESOS",
        "docker": {
          "image": "user/storage-artifacts:<SHA>",
          "forcePullImage": true
        },
        "portMappings": [
          {
            "containerPort": 80,
            "labels": {
              "VIP_0": "/storage-artifacts/<SHA>:10000"
            },
            "protocol": "tcp"
          }
        ]
      },
      "networks": [
        {
          "mode": "container/bridge"
        }
      ]
    }
    EOF
    ```
1. Add the custom package repository
    ```bash
    :; dcos package repo add storage-artifacts-<SHA> http://storage-artifacts<SHA>.marathon.l4lb.thisdcos.directory:10000/repo.json --index=0
    ```

1. Install the package
    ```bash
    :; dcos package install beta-storage --package-version=<VERSION>
    ```

Follow the instructions and push the newly built docker image to a docker registry accessible in the cluster.

```bash
$ docker push user/storage-artifacts:<SHA>
```

# Launch the local universe and artifacts server

When the docker image has been pushed to the docker registry successfully, use the marathon config to launch a Marathon app that will serve the local universe and the storage artifacts.

```bash
$ cat <<EOF | dcos marathon app add /dev/stdin
{
  "id": "/storage-artifacts/<SHA>",
  "instances": 1,
  "cpus": 0.25,
  "mem": 128,
  "container": {
    "type": "MESOS",
    "docker": {
      "image": "user/storage-artifacts:<SHA>",
      "forcePullImage": true
    },
    "portMappings": [
      {
        "containerPort": 80,
        "labels": {
          "VIP_0": "/storage-artifacts/<SHA>:10000"
        },
        "protocol": "tcp"
      }
    ]
  },
  "networks": [
    {
      "mode": "container/bridge"
    }
  ]
}
EOF
```

# Add the local universe

Wait for the Marathon app to be in “Running” state, and then add the local universe for the DSS package.

```bash
$ dcos package repo add storage-artifacts-<SHA> http://storage-artifacts<SHA>.marathon.l4lb.thisdcos.directory:10000/repo.json --index=0
```

# Install the DSS package

When the above step is successful, install the DSS package by using the below command.
This command will install the DC/OS storage sub-command.

```bash
$ dcos package install beta-storage --package-version=<VERSION>
```

# Verify that the DSS is running

Run the following command and wait for the DSS to be ready.

```bash
$ dcos storage version
```
